Fixed some issues (potential NPEs etc) and modernized cm related code.